Add lombok and flyway

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8082
-spring.datasource.url=jdbc:postgresql://localhost:5432/appInternship
+spring.datasource.url=jdbc:postgresql://localhost:5432/app_internship
 spring.datasource.username=app_internship
 spring.datasource.password=app_internship
 spring.datasource.driver-class-name=org.postgresql.Driver
