--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/app_internship
 spring.datasource.username=app_internship
 spring.datasource.password=app_internship
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.show-sql=true
