Add configurations for Kfl api, explore @Value and @Profile

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,12 @@
 server.port=8082
 spring.datasource.url=jdbc:postgresql://localhost:5432/app_internship
-spring.datasource.username=app_internship
-spring.datasource.password=app_internship
+spring.datasource.username=${DB_USERNAME:app_internship}
+spring.datasource.password=${DB_PASSWORD:app_internship}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
+spring.profiles.active=${SPRING_ACTIVE_PROFILE:jdbc}
+kaufland.api.base.url=${KAUFLAND_API_BASE_URL:http://localhost:8082/api}
+kaufland.api.baseApiUrl=http://localhost:8082/api2
+kaufland.api.canBuyProducts=false
+kaufland.api.canMakeDeliveries=true
+
